testsuite/tests/parse-errors/let_mutable_in_module.ml
(* TEST_BELOW *)

(* let mutable not allowed at structure level *)
module M = struct
  let mutable x = 20
end

(* TEST
   flags = "-extension let_mutable";
   toplevel; *)
