testsuite/tests/parse-errors/let_mutable_in_module.compilers.reference


Line 5, characters 2-20:
5 |   let mutable x = 20
      ^^^^^^^^^^^^^^^^^^
Error: Syntax error: Mutable let bindings are not allowed at the structure level

